--- a/codeigniter/assets/css/style.css
+++ b/codeigniter/assets/css/style.css
@@ -2,6 +2,10 @@
 	margin:0px;
 	padding:0px;
 }
+.nopadding_margin{
+	margin:0px;
+	padding:0px;
+}
 .header{
 	width:100%;
 	border-bottom: 1px dashed #cecece;
@@ -57,3 +61,8 @@ img{width: 100%;}
 	margin-right: 20px;
 	margin-top: 5px;
 }
+.footer{
+	background-color: #00A7E5;
+	min-height:200px;
+}
+.footer > .col-lg-5 {padding:7px 4px 0px 4px;}
