--- a/codeigniter/assets/css/style.css
+++ b/codeigniter/assets/css/style.css
@@ -52,6 +52,16 @@
 	margin:5px 5px;
 	padding: 6px 35px;
 }
+.fba{
+	width:50%;
+	float:left;
+	cursor:pointer;
+}
+.fb{
+	width: 185px;
+	position: relative;
+	left: -50px;
+}
 .btn{outline:none;}
 .error{color:#f00;}
 img{width: 100%;}
