--- a/codeigniter/assets/css/style.css
+++ b/codeigniter/assets/css/style.css
@@ -2,6 +2,7 @@
 	margin:0px;
 	padding:0px;
 }
+p{margin:0px !important;}
 .nopadding_margin{
 	margin:0px;
 	padding:0px;
@@ -65,6 +66,17 @@
 .btn{outline:none;}
 .error{color:#f00;}
 img{width: 100%;}
+.buy_pr{
+	background-color: rgba(0, 0, 0, 0.61);
+	color: #fff;
+	text-align: center;
+	padding: 10px 0px;
+	display: block;
+	max-width: 25%;
+	cursor:pointer;
+}
+.pr_disamble{display:none;}
+.pr_active{display:block;}
 .avatar{
 	width: 25%;
 	float: left;
