--- a/codeigniter/assets/css/style.css
+++ b/codeigniter/assets/css/style.css
@@ -82,13 +82,31 @@ img{width: 100%;}
 	margin: 0px;
 	cursor: default;
 }
+.cart_view{
+	width:50px;
+	height:50px;
+	background-image: url(../img/cart.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	float: left;
+}
 .pr_disamble{display:none;}
 .pr_active{display:block;}
 .avatar{
-	width: 25%;
+	width: 15%;
 	float: left;
 	margin-right: 20px;
 	margin-top: 5px;
+	margin-left: 20px;
+}
+.cart_count{
+	padding: 2px 10px;
+	color: #fff;
+	background-color: #f00;
+	border-radius: 100%;
+	display: block;
+	float: left;
+	margin-left: 15px;
 }
 .footer{
 	background-color: #00A7E5;
